--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="list-benefits">
             <li class="item-benefits">
+              <div class="icons-item">
+                <svg class="icon" width=" 64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title-benefits">Strategy</h3>
               <p class="text-benefits">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +76,11 @@
               </p>
             </li>
             <li class="item-benefits">
+              <div class="icons-item">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title-benefits">Punctuality</h3>
               <p class="text-benefits">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +88,11 @@
               </p>
             </li>
             <li class="item-benefits">
+              <div class="icons-item">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title-benefits">Diligence</h3>
               <p class="text-benefits">
                 Research and confirm brands with the strongest digital growth
@@ -85,6 +100,11 @@
               </p>
             </li>
             <li class="item-benefits">
+              <div class="icons-item">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title-benefits">Technologies</h3>
               <p class="text-benefits">
                 Design practice focused on digital experiences. We bring forth a
