--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@
               <div class="team-member">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-icon">
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item-team">
@@ -130,6 +160,36 @@
               <div class="team-member">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-icon">
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item-team">
@@ -137,6 +197,36 @@
               <div class="team-member">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-icon">
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item-team">
@@ -144,6 +234,36 @@
               <div class="team-member">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-icon">
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="link-icon" href="" target="_blank">
+                      <svg class="link-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
