--- a/index.html
+++ b/index.html
@@ -292,55 +292,90 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="team-images">
+                <img
+                  src="./images/portfolio-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="text-our">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-port">
                 <h3 class="title-portfolio">Cashless Payment</h3>
                 <p class="text-portfolio">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-3.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="team-images">
+                <img
+                  src="./images/portfolio-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="text-our">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-port">
                 <h3 class="title-portfolio">Meditation App</h3>
                 <p class="text-portfolio">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-4.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="team-images">
+                <img
+                  src="./images/portfolio-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="text-our">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-port">
                 <h3 class="title-portfolio">Taxi Service</h3>
                 <p class="text-portfolio">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="team-images">
+                <img
+                  src="./images/portfolio-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="text-our">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-port">
                 <h3 class="title-portfolio">Screen Illustrations</h3>
                 <p class="text-portfolio">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/portfolio-6.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="team-images">
+                <img
+                  src="./images/portfolio-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="text-our">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-port">
                 <h3 class="title-portfolio">Online Courses</h3>
                 <p class="text-portfolio">Marketing</p>
